--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,44 @@
 <header class="sign_up">
     <div class="content-header login_and_signup">
         <div class="loginbox">
-            <h2>Créer un compte gratuitement</h2>
-            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <%= render "devise/shared/error_messages", resource: resource %>
-            <div class="inputloginbox">
-                <%= f.email_field :email, autofocus: true, autocomplete: "email", required: "" %>
-                <%= f.label :email %><br />
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), action: :create, method: :post, multipart: true, class: "register-form") do |f| %>
+            <div class="form">
+                <div class="userDiv">
+                    <h2>Créer un compte gratuitement</h2>
+                    <div class="inputloginbox">
+                        <%= f.email_field :email, autofocus: true, autocomplete: "email", required: "" %>
+                        <%= f.label :email %><br />
+                    </div>
+                    <div class="inputloginbox">
+                        <%= f.text_field :username, autofocus: true, autocomplete: "username", required: "" %>
+                        <%= f.label :username, "Nouveau pseudo" %><br />
+                    </div>
+                    <div class="inputloginbox">
+                        <%= f.password_field :password, autocomplete: "new-password", required: "" %>
+                        <%= f.label :password, "Nouveau mot de passe" %>
+                        <% if @minimum_password_length %>
+                        <em>(
+                            <%= @minimum_password_length %> characters minimum)</em>
+                        <% end %>
+                    </div>
+                    <div class="inputloginbox">
+                        <%= f.password_field :password_confirmation, autocomplete: "new-password", required: "" %>
+                        <%= f.label :password_confirmation, "Confirmer votre mot de passe" %><br />
+                    </div>
+                    <div class="">
+                        <%= f.label :avatar, "Choisissez votre avatar" %>
+                        <%= f.file_field :avatar %>
+                    </div><br>
+                </div>
             </div>
-            <div class="inputloginbox">
-                <%= f.text_field :username, autofocus: true, autocomplete: "username", required: "" %>
-                <%= f.label :username, "Nouveau pseudo" %><br />
-            </div>
-            <div class="inputloginbox">
-                <%= f.password_field :password, autocomplete: "new-password", required: "" %>
-                <%= f.label :password, "Nouveau mot de passe" %>
-                <% if @minimum_password_length %>
-                <em>(<%= @minimum_password_length %> characters minimum)</em>
-                <% end %>
-            </div>
-            <div class="inputloginbox">
-                <%= f.password_field :password_confirmation, autocomplete: "new-password", required: "" %>
-                <%= f.label :password_confirmation, "Confirmer votre mot de passe" %><br />
-            </div>
-            <div class="button_submit">
-                <div><%= f.submit "S'inscrire" %></div>
+            <div class="button_submit" style="width: 100%;">
+                <%= f.submit "S'inscrire" %>
             </div>
             <% end %>
+            <div class="row" style="margin-top: 5%;">
+                <div class="col-md-6" style="text-align: center;"><button class="new_student btn btn-light"> S'inscrire en tant qu'élève</button></div>
+                <div class="col-md-6" style="text-align: center;"><button class="new_teacher btn btn-dark"> S'inscrire en tant que prof</button></div>
+            </div>
         </div>
     </div>
 </header>
