--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -8,7 +8,7 @@ $(`div#yield`).slideUp('slow');
 		searching = Teacher.all
 	end %>
 		$(`div#search_result`).html(`
-			<strong><%= searching %> : </strong><br></br>
+			<strong><%= search %> : </strong><br></br>
 			<table class="table">
 			    <thead class="thead-dark">
 			        <tr>
