--- a/app/assets/stylesheets/teachers.css
+++ b/app/assets/stylesheets/teachers.css
@@ -1,7 +1,9 @@
 /* Teachers forms */
 #teacher_form {
+    margin-top: 2%;
     width: 100%;
     height: 100%;
+    border: 1px solid gold;
 }
 
 #teacher_form .teacher_form{
@@ -17,8 +19,7 @@
 
 /* New teacher CSS */
 .new_teacher {
-    background: url('../assets/bg_copie.png') center no-repeat;
-    background-size: cover;
+    /* background: url('../assets/bg_copie.png') center no-repeat; background-size: cover; */
 }
 
 .new_teacher div {
