--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -1,66 +1,112 @@
-.users_content, .users_content.container{
-	background: url('');
-	background: rgba(0, 0, 0, .5);
-	border: 1px solid gold;
-	position: relative;
-	bottom: 23em;
-	left: 2%;
-	max-width: 1080px;
-	padding: 0% 1% 1% 1%;
-	margin-bottom: 0%;
-}
-.users_content.container, .users_content .container{
-	background: 0 0;
-	width: 100%;
-	margin: 0%;
+.user_form *{ 
+    font-family: 'Orbitron';
 }
 
-.user_form{
-	/* background: url('animate_bg.gif') center no-repeat fixed; */
-	background-size: cover;
+.user_form .description {
+    padding: 5% 1% 1% 1%;
+	/* background-image: url('../assets/super-mario-bg.gif'); */
+    background: rgba(250, 250, 250, .7);
+    height: 48%;
+    font-weight: bold;
+    font-style: italic;
+
+    box-shadow: 1px 2px 3px 4px;
+    /* color: #0097e6; */
+    /* color: #20C20E; */
 }
-.user_form div{
-	/* border: 1px solid red; */
-	padding: 3% 2%;
+.user_form .description:hover {
 }
+.users_content,
+.users_content.container {
+    background: rgba(0, 0, 0, .9);
+    color: white;
+    border: 2px solid #141C2F;
+    position: relative;
+    bottom: 20em;
+    left: 2%;
+    width: 1080px;
+    min-height: 250px;
+    height: auto;
+    padding: 1% 1% 1% 1%;
+    background-size: cover;
+}
+
+.users_content.container,
+.users_content .container {
+    background: 0 0;
+    width: 100%;
+    margin: 0%;
+}
+
+
+.user_form div {
+    /* border: 1px solid red; */
+    padding: 3% 2%;
+}
+
 /* Left div */
-.user_form .left{
-	margin-top: 3%;
-	padding: 1%;
-}
-.user_form .left div{
-	width: 180px;
-	margin-bottom: 7%;
-}
-.user_form .logo{
-	height: 180px;
-}
-.user_form .logo{
-	padding: 0;
-	margin: 0;
-}
-.user_form .links{
-	background: #eee;
-}
-.user_form .links ul{
-	list-style: none;
-	padding: 0% 2%;
-	line-height: 2em;
-	font-size: 1em;
-}
-/* Right div */
-.user_form .right{
-	margin-top: 3%;
-	padding: 1%;
-}
-.user_form .right div{
-	max-width: 1100px;
+.user_form .left {
+    margin-top: 3%;
+    padding: 1%;
 }
 
-.user_form .content{
-	max-width: 1000px;
+.user_form .left div {
+    width: 180px;
+    margin-bottom: 7%;
+}
+.user_form .logo {
+    height: 180px;
+    padding: 0;
+    margin: 0;
+}
+.user_form .logo img{
+	border-radius: 50%;
+}
+
+.user_form .links {
+    background: rgba(250, 250, 250, 1);
+    word-spacing: .2em;
+    box-shadow: 1px 2px 3px 4px;
+    color: #0097e6;
+}
+
+.user_form .links ul {
+    list-style: none;
+    padding: 0% 2%;
+    line-height: 2em;
+    font-size: 1em;
+}
+.user_form .links ul li{
+	border: 1px double #0097e6;
+	color: #0097e6;
+	margin: 1% 0% 2% 0%;
+	padding: 3% 0 0 0;
+	text-align: center;
+}
+.user_form .links ul li:hover{
+	box-shadow: 1px 1px 3px 3px;
+}
+.user_form .links ul li a:hover{
+	color: #0097e6;
+}
+
+/* Right div */
+.user_form .right {
+    margin-top: 3%;
+    padding: 1%;
+}
+
+.user_form .right div {
+    max-width: 1100px;
+}
+
+.user_form .content {
+    max-width: 1000px;
 }
 
 /* Show user */
-.user_show{
+.user_show .img{
+}
+.user_show .row .col-md-2, .user_show .row .col-md-4 {
+	border-right: 2px solid #141C2F;
 }
