--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,12 +1,15 @@
 <div class="">
-    <h2 style="text-align: center;">Edit
-        <%= resource_name.to_s.humanize %>
-    </h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
-    <div class="">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="row">
+        <div class="col-md-6">
+            <%= f.label :username %><br />
+            <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
+        </div>
+        <div class="col-md-6">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
     </div>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for:
@@ -15,7 +18,7 @@
     <% end %>
     <div class="row">
         <div class="col-md-6">
-            <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+            <%= f.label :password do %>Password <i> (leave blank if you don't want to change it)</i><% end %><br>
             <%= f.password_field :password, autocomplete: "new-password" %>
             <% if @minimum_password_length %>
             <em>
@@ -30,7 +33,7 @@
     <div class="">
         <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
         <%= f.password_field :current_password, autocomplete: "current-password" %>
-    </div>
+    </div><br>
     <div class="actions">
         <%= f.submit "Update" %>
     </div>
